<?xml version="1.0" encoding="utf-8"?>
<resources>
        <!-- Основные строки -->
        <string name="app_name">YNIKIT</string>
        <string name="title_activity_profile">Профиль</string>

        <!-- Для меню -->
        <string name="menu_home">Главная</string>
        <string name="menu_gallery">Материалы</string>
        <string name="menu_slideshow">Тесты</string>
        <string name="menu_history">История</string>
        <string name="action_settings">Настройки</string>

        <!-- Для навигационного заголовка -->
        <string name="nav_header_title">Мой профиль</string>
        <string name="nav_header_subtitle">email@example.com</string>
        <string name="nav_header_desc">Описание профиля</string>

        <!-- Для фрагмента о специальности -->
        <string name="large_text_about_speciality">
                КОМПЕТЕНЦИИ БУДУЩЕГО, КОТОРЫЕ ВЫ ПРИОБРЕТЕТЕ НА ЛЮБОЙ СПЕЦИАЛЬНОСТИ: \n\n
- Быть кросс-функциональным, работать на стыке профессий\n
- Уметь работать удаленно\n
- Быть профессионалом big data – уметь собирать и распоряжаться большим объемом информации\n
- Быть «универсальным солдатом»: знать иностранные языки, уметь творчески мыслить, обладать soft skills\n
- Уметь самообучаться: развитие IT-технологий будет стремительным\n\n
Дополнительная информация:\n
1. Право поступления на места, объявленные для конкурса и финансируемые из средств федерального бюджета, имеют граждане Российской Федерации.\n

2. Прием в колледж на обучение по образовательным программам проводится без экзаменов по рейтингу среднего балла аттестатов*.\n

3. Перевод из других средних профессиональных учебных заведений проводится в течение учебного года.\n\n
                Форма обучения: Очная\n\n

        Квалификация: программист / разработчик веб и мультимедийных приложений / специалист по информационным системам / специалист по информационным ресурсам / технический писатель\n\n

        Срок обучения: 3 года 10 месяцев\n\n

        Общая численность обучающихся: информация уточняется, в том числе\n
        - численность обучающихся за счет бюджетных ассигнований федерального бюджета: информация уточняется\n
        - численность обучающихся за счет бюджетных ассигнований бюджетов субъектов Российской Федерации: 0\n
        - численность обучающихся за счет бюджетных ассигнований местных бюджетов: 0\n
        - численность обучающихся по договорам об образовании за счет средств физических и (или) юридических лиц: информация уточняется\n\n

        Места проведения практики: информация уточняется\n\n

        Адрес места проведения практической подготовки обучающихся: г. Москва, Костомаровская наб., 29.\n\n

        Адрес места проведения государственной итоговой аттестации: г. Москва, Костомаровская наб., 29.\n\n

        Получив эту специальность, ты сможешь заниматься разработкой баз данных, дизайна веб- и мультимедиа приложений, администрированием баз данных и серверов. Данная специальность, входящая в ТОП-50 профессий, самых востребованных на рынке труда, позволит применять полученные знания в области разработки и интеграции программных модулей, ревьюирования программного обеспечения.
        </string>
        <string name="code">
                <b>09.02.07 Информационные системы и программирование</b>
        </string>
        <string name="description_of_the_educational_program">
                <b>09.02.07 Информационные системы и программирование</b>
        </string>
        <string name="NameOfTitle1">
                <b>Описание образовательной программы</b>
        </string>
        <string name="information_of_ISP_01">
                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений)(2024)</u>
        </string>
        <string name="information_of_ISP_02">
                <u>09.02.07 Информационные системы и программирование (квалификация: программист) (2023)</u>
        </string>
        <string name="information_of_ISP_03">
                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений) (2023) </u>
        </string>
        <string name="information_of_ISP_04">
                <u>09.02.07 Информационные системы и программирование (квалификация: программист)</u>
        </string>
        <string name="information_of_ISP_05">
                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений) </u>
        </string>
        <string name="NameOfTitle2">
                <b>Учебный план</b>
        </string>
        <string name="information_of_ISP_06">
                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений) 2024</u>
        </string>
        <string name="NameOfTitle3">
                <b>Программы практик</b>
        </string>
        <string name="information_of_ISP_07">
                <u>09.02.07 Информационные системы и программирование </u>
        </string>

        <string name="TestFoAbiturient">
                <b>Тестирование</b>
        </string>

        <string name="TxtFoAbiturient">
                Этот тест поможет абитуриентам колледжа оценить свой уровень знаний по ключевым техническим дисциплинам — программированию, математике и основам физики, которые часто требуются для поступления на IT-специальности.\n
                        Он позволяет проверить логическое мышление и аналитические способности, что особенно важно для будущих программистов и IT-специалистов.\n
                        В конечном счете, тест — это отличный способ подготовиться к обучению в колледже и убедиться в своем интересе к техническим наукам.
        </string>
    <string name="title_activity_maps">MapsActivity</string>
        <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="Map">
                <b>МГУТУ имени К.Г. Разумовского, университетский колледж информационных технологий</b>
        </string>
        <string name="Priemka">
                ВОПРОСЫ ПО ПОСТУПЛЕНИЮ\n\n
                        1. Как выстраивается рейтинг абитуриентов при зачислении?\n\n

Если численность поступающих на бюджетные места превышает количество бюджетных мест в рамках контрольных цифр приема,  прием на обучение осуществляется на основе результатов освоения поступающими образовательной программы основного общего образования, указанных в представленных поступающими документах об образовании (конкурс аттестатов об основном общем образовании) (пункт 7.3 Правил приема).\n

2. До какого числа возможно зачисление, если я опоздал подать документы в августе?\n\n

Прием документов в Университет на основные образовательные программы среднего профессионального образования при наличии свободных мест может продлеваться до 25 ноября текущего года (пункт 4.1 Правил приема).\n

3. Как ранжируются абитуриенты в рейтинге в случае равенства среднего балла?\n\n

При равенстве баллов аттестатов, приемная комиссия производит ранжирование абитуриентов в следующем порядке (пункт 7.7 Правил приема):\n\n

1) наличие договора о целевом обучении;\n\n

2)  наличие результатов индивидуальных достижений;\n\n

3) средний балл выставленных в аттестат отметок по профильным для специальности, на которую поступает абитуриент, предметам;\n\n

4) средний балл, полученный абитуриентом на государственной итоговой аттестации по программам основного общего (ОГЭ) или среднего общего (ЕГЭ) образования;\n\n

Свои вопросы присылайте на электронную почту priem.ukit@mgutm.ru
        </string>
        <string name="WantBeAdmin">
                <b>Для получения доступа к правам администратора и возможности совершать действия по редактированию тестов, а так же добавлению новых материалов, необходимо получить права админа, запрос обрабатывается в течении 1 часа.</b>
        </string>
        <string name="AlreadyAdmin">
                Если у вас есть права админа, то выберите действие:
        </string>
        <string name="InfoOn2025">
               <b> Материалы на текущий учебный год</b>
        </string>
        <string name="Info2025">
                <u>Материалы на текущий учебный год</u>
        </string>
        <string name="Zaregistr">
        <u>Зарегистрироваться</u>
        </string>
</resources>